# todotxt-web

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  DOCKER.md  Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  todo.py  todo.txt  todo_db.py  todo_parser.py  user_manager.py
.github/workflows/: docker-build-push.yml
cli/: todo.py
mcp/: requirements.txt  server.py
nvim/: todo.lua
nvim/plugins/: todo.lua
static/css/: style.css
static/js/: app.v1.js
templates/: add_task.html  base.html  edit_task.html  index.html  journal.html  login.html  profile.html  register.html
todotui/: Cargo.toml  Makefile  README.md
todotui/src/: api.rs  app.rs  main.rs  ui.rs
