[package]
name = "todotui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todotui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
